fix added by updating .main-content to push footer to bottom of page when content height too short

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
+  flex: 1;               
 }
 
 .App-logo {
